--- a/src/components/taskApp.module.css
+++ b/src/components/taskApp.module.css
@@ -1,3 +1,7 @@
 .taskApp {
-  /* Sample */
+  width: 400px;
+  margin: auto;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border-radius: 10px;
+  padding-bottom: 25px;
 }
