--- a/src/components/TaskHeader/taskHeader.module.css
+++ b/src/components/TaskHeader/taskHeader.module.css
@@ -1,3 +1,6 @@
 .taskHeader {
-  /* Sample */
+  background-color: aquamarine;
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
